webhook notification implemented

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,8 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node"
+  },
+  "paths": {
+    "@process/*": ["src/process/*"]
   }
 }
